2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Don't update the search entry when a match
    is clicked in the match sidepane.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: The source was not closed
    after using it.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Fixed crash when a word in kana is
    entered.

2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/net/dict.rb: Don't use the dotted line as the end of
    definition marker. This is more reliable.

2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/net/dict.rb: Handles the case when no strategies are
    available.

2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/utils.rb: Fixed String#kana? so that a string containing
    both hiragana and katakana returns true. Added String#japanese?.
    * lib/fantasdic/sources/edict_file.rb: Added a new source to look up words
    in an EDICT file. The implementation uses egrep for performance. A pure
    Ruby implementation needs be added for cases when egrep isn't available.
    See http://www.csse.monash.edu.au/~jwb/j_edict.html for more information
    about EDICT.
    * po/POTFILES.in: Added edict_file.rb.

2007-10-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * post-clean.rb: Added files that need to be cleaned.

2007-10-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/pre-setup.rb: Don't copy .svn dirs.

2007-10-18 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb: Method "available_strategies"
    should not depend on method "available_databases".

2007-10-18 Mathieu Blondel <mblondel@svn.gnome.org>

    * po/POTFILES.in: Added lib/fantasdic/source_base.rb.

2007-10-14 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/utils.rb: Added String#latin?, String#kana?, String#kanji?